extra override path for work authorship

--- a/home/dot_config/git/config
+++ b/home/dot_config/git/config
@@ -135,6 +135,8 @@
 ## Work-related stuff
 
 # Project overrides
+[includeIf "hasconfig:remote.*.url:https://github.com/versapay/*"]
+        path = ~/.config/git/versapay
 [includeIf "hasconfig:remote.*.url:git@github.com:versapay/**"]
         path = ~/.config/git/versapay
 [includeIf "hasconfig:remote.*.url:git@github.com:versapay-old/**"]
